Fix page size input/button alignment
Fixes RM-13973

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -645,7 +645,7 @@ header .navbar .nav-link-user-sub {
 }
 
 .record-pager-change {
-  display: none;
+  display: inline-flex;
 }
 
 .record-pager-change {
